--- a/src/main/java/Image_Synthesizer.form
+++ b/src/main/java/Image_Synthesizer.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="766" height="653"/>
+      <xy x="20" y="20" width="675" height="622"/>
     </constraints>
     <properties>
       <enabled value="true"/>
@@ -40,8 +40,8 @@
                   <grid id="77c73" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="1" column="1" row-span="3" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <preferred-size width="128" height="88"/>
+                      <grid row="1" column="1" row-span="3" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="100" height="-1"/>
                       </grid>
                     </constraints>
                     <properties/>
@@ -89,9 +89,7 @@
                   </component>
                   <component id="42785" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="128" height="16"/>
-                      </grid>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="size"/>
@@ -113,9 +111,9 @@
                       <text value="z"/>
                     </properties>
                   </component>
-                  <component id="d5b53" class="javax.swing.JFormattedTextField" binding="minX">
+                  <component id="f677f" class="javax.swing.JTextField" binding="minX">
                     <constraints>
-                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="100" height="-1"/>
                       </grid>
                     </constraints>
@@ -215,7 +213,7 @@
                   <text value="inverting LUT"/>
                 </properties>
               </component>
-              <grid id="3bba7" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="3bba7" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -235,7 +233,7 @@
                   </component>
                   <toolbar id="9f8d1">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <borderPainted value="false"/>
@@ -254,19 +252,44 @@
                           <minimumSize width="100" height="27"/>
                         </properties>
                       </component>
+                      <component id="9a27e" class="javax.swing.JButton" binding="addSizePresetButton">
+                        <constraints/>
+                        <properties>
+                          <focusable value="false"/>
+                          <text value="+"/>
+                        </properties>
+                      </component>
+                      <component id="72117" class="javax.swing.JButton" binding="removeSizePresetButton">
+                        <constraints/>
+                        <properties>
+                          <text value="-"/>
+                        </properties>
+                      </component>
+                      <component id="9e4b6" class="javax.swing.JToolBar$Separator">
+                        <constraints/>
+                        <properties/>
+                      </component>
                       <component id="68d78" class="javax.swing.JComboBox" binding="dimensionComboBox">
                         <constraints/>
                         <properties>
                           <minimumSize width="100" height="27"/>
                         </properties>
                       </component>
+                      <component id="23031" class="javax.swing.JButton" binding="addDimensionPresetButton">
+                        <constraints/>
+                        <properties>
+                          <focusable value="false"/>
+                          <text value="+"/>
+                        </properties>
+                      </component>
+                      <component id="3bbcb" class="javax.swing.JButton" binding="removeDimensionPresetButton">
+                        <constraints/>
+                        <properties>
+                          <text value="-"/>
+                        </properties>
+                      </component>
                     </children>
                   </toolbar>
-                  <hspacer id="7f6c1">
-                    <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                  </hspacer>
                 </children>
               </grid>
               <grid id="52715" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -601,13 +624,17 @@
                   </hspacer>
                 </children>
               </grid>
-              <component id="d5a4e" class="javax.swing.JTextArea" binding="primitveTextArea">
+              <component id="d5a4e" class="javax.swing.JTextArea" binding="primitiveTextArea">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <font name="Fira Code"/>
+                  <lineWrap value="true"/>
+                  <text value=""/>
+                </properties>
               </component>
               <toolbar id="875ad">
                 <constraints>
