--- a/src/main/java/Image_Synthesizer.form
+++ b/src/main/java/Image_Synthesizer.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="672" height="790"/>
+      <xy x="20" y="20" width="672" height="800"/>
     </constraints>
     <properties>
       <enabled value="true"/>
@@ -362,6 +362,7 @@
                           </grid>
                         </constraints>
                         <properties>
+                          <enabled value="false"/>
                           <focusTraversalPolicyProvider value="false"/>
                           <text value="1"/>
                         </properties>
@@ -598,7 +599,7 @@
         <border type="none"/>
         <children>
           <grid id="1c8f0" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+            <margin top="5" left="5" bottom="5" right="5"/>
             <constraints>
               <tabbedpane title="Function"/>
             </constraints>
